# geodata

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: constants.py  load_firestations_data.py
src/dags/: fire_stations.py  test.py
